--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,8 +1,11 @@
 .hero {
     background-color: $dark-blue1;
-    background-image: url(../dist/images/bg-curvy-mobile.svg);
+    background-image: url(../images/bg-curvy-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-y: bottom;
     text-align: center;
-    padding-bottom: 5rem;
+    padding: 2rem 0 5rem;
 
     img {
         width: 100%;
@@ -32,11 +35,11 @@
             hsl(176, 68%, 64%),
             hsl(198, 60%, 50%),
         );
-}
 
-section,
-footer {
-    background-color: $dark-blue2;
+        &:hover {
+            opacity: .9;
+            background-color: #fff;
+        }
 }
 
 .about {
@@ -58,7 +61,7 @@ footer {
     
 
     &__productive {
-        margin-top: 4rem;
+        margin-top: 5rem;
         text-align: left;
 
         &-img {
@@ -68,13 +71,119 @@ footer {
         &-cta {
             display: flex;
             align-items: center;
+            max-width: 150px;
             margin-top: 1rem;
             padding-bottom: .5rem;
             border-bottom: 1px solid $primary;
+        }
+
+        &-text {
+            margin-top: 3rem;
         }
     }
 }
 
 .testimonials {
-    padding-top: 10rem;
+    padding: 10rem 0;
+
+    &__card {
+        background-color: $dark-blue4;
+        padding: 1rem 2rem;
+        border-radius: .4rem;
+        margin: 2rem auto 0;
+        width: 90%;
+
+        img {
+            border-radius: 50%;
+            width: 40px;
+        }
+
+        &-person {
+            display: flex;
+            align-items: center;
+            margin-top: 1.5rem;
+        }
+
+        &-text {
+            display: flex;
+            flex-direction: column;
+            margin-left: 1rem;
+
+            small {
+                font-size: 12px;
+            }
+        }
+    }
+}
+
+.join {
+    padding: 2rem;
+    background-color: $dark-blue1;
+    text-align: center;
+    margin-bottom: 5rem;
+    border-radius: .3rem;
+
+    input {
+        margin: 2rem 0;
+        padding: 1rem 1.5rem;
+        border-radius: 3rem;
+        border: none;
+        width: 100%;
+    }
+
+    button {
+        width: 100%;
+        padding: 1.2rem;
+    }
+}
+
+.footer {
+    padding: 2rem 0;
+    background-color: $dark-blue3;
+
+    p {
+        margin-top: 0;
+    }
+
+    a:hover {
+        font-weight: bold;
+    }
+
+    &__logo {
+        margin: 2rem 0;
+    }
+
+    .section1,
+    .section2 {
+        display: grid;
+        grid-template-columns: 40px 1fr;
+        gap: 2rem;
+        margin-top: 2rem;
+    }
+
+    .section2 {
+        align-items: center;
+    }
+
+    .section3,
+    .section4 {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        
+        a {
+            margin-top: 1rem;
+        }
+    }
+
+    .section5 {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        
+        a {
+            margin-left: 1rem;
+        }
+    }
 }
