--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -9,7 +9,7 @@
     }
 
     .logo {
-        max-width: 100px;
+        max-width: 90px;
     }
 }
 
@@ -20,10 +20,15 @@
 
     &__item {
         list-style: none;
-        margin-left: 1.5rem;
+        margin-left: 1.3rem;
     }
 
     &__link {
-        font-size: 1.2rem;
+        font-size: 1rem;
+
+        &:hover {
+            border-bottom: 1px solid $primary;
+            font-weight: bold;
+        }
     }
 }
